fixed problem with noclicable navlinks on mobile

--- a/client/src/components/views/Homepage/Homepage.module.scss
+++ b/client/src/components/views/Homepage/Homepage.module.scss
@@ -12,6 +12,7 @@
 
 .homePageMainTextContainer {
   max-width: 400px;
+  z-index: -1;
   display: flex;
   align-items: center;
   .homePageMainText {
